--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  # service locator
+  get_it: ^2.0.1
+  # bloc for state management
+  flutter_bloc: ^0.21.0
+  # value equality
+  equatable: ^0.4.0
+  # functional programming thingies
+  dartz: ^0.8.6
+  # remote api
+  connectivity: ^0.4.3+7
+  http: ^0.12.0+2
+  # local cache
+  shared_preferences: ^0.5.3+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -27,6 +40,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^4.1.0
 
 
 # For information on the generic Dart part of this file, see the
